[gd_scene load_steps=12 format=3 uid="uid://dc6jw4arwneon"]

[ext_resource type="Script" path="res://scripts/NakamaClient.gd" id="1_kqd0p"]
[ext_resource type="Texture2D" uid="uid://gc1vmy2ygaye" path="res://assets/TX Tileset Grass.png" id="2_vpu8v"]
[ext_resource type="PackedScene" uid="uid://5dcoq1ojrjcf" path="res://scenes/Gama/wall.tscn" id="3_ekmmf"]
[ext_resource type="PackedScene" uid="uid://cqrcx4mk6o7fv" path="res://scenes/Gama/enemy.tscn" id="4_1sovk"]
[ext_resource type="PackedScene" uid="uid://0nka4rtgo7vg" path="res://scenes/Gama/player.tscn" id="5_5f1lg"]
[ext_resource type="PackedScene" uid="uid://dlb8v6ch4vqht" path="res://scenes/Gama/tile_piece.tscn" id="6_x7epu"]
[ext_resource type="PackedScene" uid="uid://bodyoiwslhiv1" path="res://scenes/Gama/key.tscn" id="9_imb6i"]
[ext_resource type="PackedScene" uid="uid://bbtihlbhgix8u" path="res://scenes/Gama/BasicLightning.tscn" id="10_kbkyr"]
[ext_resource type="PackedScene" uid="uid://r62u7glqoqtw" path="res://scenes/Gama/door.tscn" id="10_xqvk1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ebk6o"]
texture = ExtResource("2_vpu8v")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_xdt47"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_ebk6o")

[node name="TestMain" type="Node2D"]
script = ExtResource("1_kqd0p")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(176, 175)
scale = Vector2(0.5, 0.5)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_xdt47")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 327680, 3, 131072, 0, 0, 196608, 327680, 3, 262144, 0, 0, 262145, 327680, 3, 262146, 0, 0, 262147, 327680, 3, 262148, 0, 0, 196612, 327680, 3, 131076, 0, 0, 65540, 327680, 3, 65539, 0, 4, 3, 327680, 3, 4, 0, 0, 2, 0, 0, 1, 327680, 3, 65537, 0, 4, 131073, 327680, 3, 196609, 0, 4, 196610, 327680, 3, 131074, 0, 0, 65538, 327680, 3, 196611, 0, 4, 131075, 327680, 3, 327680, 327680, 3, 393216, 0, 0, 458752, 327680, 3, 524288, 0, 0, 327681, 0, 4, 393217, 327680, 3, 458753, 0, 4, 524289, 327680, 3, 327682, 327680, 3, 393218, 0, 0, 458754, 327680, 3, 524290, 0, 0, 327683, 0, 4, 393219, 327680, 3, 458755, 0, 4, 524291, 327680, 3, 327684, 327680, 3, 393220, 0, 0, 458756, 327680, 3, 524292, 0, 0, 5, 327680, 3, 65541, 0, 4, 131077, 327680, 3, 196613, 0, 4, 262149, 327680, 3, 327685, 0, 4, 393221, 327680, 3, 458757, 0, 4, 524293, 327680, 3, 6, 0, 0, 65542, 327680, 3, 131078, 0, 0, 196614, 327680, 3, 262150, 0, 0, 327686, 327680, 3, 393222, 0, 0, 458758, 327680, 3, 524294, 0, 0, 7, 327680, 3, 65543, 0, 4, 131079, 327680, 3, 196615, 0, 4, 262151, 327680, 3, 327687, 0, 4, 393223, 327680, 3, 458759, 0, 4, 524295, 327680, 3, 8, 0, 0, 65544, 327680, 3, 131080, 0, 0, 196616, 327680, 3, 262152, 0, 0, 327688, 327680, 3, 393224, 0, 0, 458760, 327680, 3, 524296, 0, 0)

[node name="Walls" type="Node2D" parent="."]
position = Vector2(-32, -32)

[node name="Wall9" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 256)

[node name="Wall2" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(32, 320)

[node name="Wall3" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 64)

[node name="Wall4" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 96)

[node name="Wall6" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 128)

[node name="Wall5" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 160)

[node name="Wall7" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 192)

[node name="Wall8" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 224)

[node name="Wall10" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 288)

[node name="Wall11" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 320)

[node name="Wall13" parent="Walls" instance=ExtResource("3_ekmmf")]

[node name="Wall14" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(96, 0)

[node name="Wall15" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 0)

[node name="Wall16" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(32, 0)

[node name="Wall" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(0, 32)

[node name="Wall17" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 64)

[node name="Wall18" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 96)

[node name="Wall20" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 288)

[node name="Wall21" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 224)

[node name="Wall58" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(224, 320)

[node name="Wall59" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 96)

[node name="Wall60" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 160)

[node name="Wall61" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(160, 64)

[node name="Wall62" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(224, 64)

[node name="Wall63" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(224, 128)

[node name="Wall22" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 32)

[node name="Wall23" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 64)

[node name="Wall24" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 128)

[node name="Wall25" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 64)

[node name="Wall26" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 64)

[node name="Wall27" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 64)

[node name="Wall28" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 128)

[node name="Wall29" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 128)

[node name="Wall30" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 128)

[node name="Wall31" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 128)

[node name="Wall32" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 256)

[node name="Wall33" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 320)

[node name="Wall34" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 256)

[node name="Wall35" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 256)

[node name="Wall36" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 320)

[node name="Wall37" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(64, 192)

[node name="Wall38" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 256)

[node name="Wall39" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 320)

[node name="Wall40" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 192)

[node name="Wall41" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 256)

[node name="Wall42" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 192)

[node name="Wall43" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 320)

[node name="Wall44" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 192)

[node name="Wall45" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 320)

[node name="Wall46" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 192)

[node name="Wall47" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 0)

[node name="Wall48" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(288, 0)

[node name="Wall49" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(256, 0)

[node name="Wall50" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(224, 0)

[node name="Wall51" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(192, 0)

[node name="Wall52" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(160, 0)

[node name="Wall53" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(128, 0)

[node name="Wall54" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(288, 320)

[node name="Wall55" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(160, 320)

[node name="Wall56" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(96, 320)

[node name="Wall57" parent="Walls" instance=ExtResource("3_ekmmf")]
position = Vector2(320, 160)

[node name="Enemy1" parent="." instance=ExtResource("4_1sovk")]
position = Vector2(256, 0)

[node name="Enemy2" parent="." instance=ExtResource("4_1sovk")]
position = Vector2(-1, 256)

[node name="Enemy3" parent="." instance=ExtResource("4_1sovk")]
position = Vector2(64, 64)

[node name="Enemy4" parent="." instance=ExtResource("4_1sovk")]
position = Vector2(256, 192)

[node name="Enemy5" parent="." instance=ExtResource("4_1sovk")]
position = Vector2(65, 256)

[node name="Player" parent="." instance=ExtResource("5_5f1lg")]
position = Vector2(0, 0)

[node name="TilePiece" parent="." instance=ExtResource("6_x7epu")]
position = Vector2(-155, -165)
scale = Vector2(1.89695, 1.73142)

[node name="Key" parent="." instance=ExtResource("9_imb6i")]
visible = false
position = Vector2(16, 144)

[node name="Door" parent="." instance=ExtResource("10_xqvk1")]
visible = false
position = Vector2(288, 128)

[node name="GameOverLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 43.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 368.0
text = "                GAME OVER"

[node name="GameWinLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 43.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 368.0
text = "                YOU WIN!"

[node name="BasicLightning" parent="." instance=ExtResource("10_kbkyr")]

[connection signal="door_opened" from="Key" to="Door" method="_on_key_door_opened"]
[connection signal="entered_door_zone" from="Door" to="Key" method="_on_door_entered_door_zone"]
[connection signal="exited_door_zone" from="Door" to="Key" method="_on_door_exited_door_zone"]
